<resources>
	<string name="app_name">Device Profile</string>
	<string name="welcome_text">Hello! I\'m a droid.</string>
	<string name="hint_touch_text">Touch image show ID</string>
	<string name="label_ids">ID List:</string>
	<string name="id_type_oaid">OAID</string>
	<string name="hint_debug_message">Debug message</string>
	<string name="id_md5_radio">Include md5</string>
	<string name="hint_empty_id">The device id is empty or not reading</string>
	<string name="hint_empty_id_debug">fb78bee4d479fa676637cf92b3054c7332bf6caae1d9c786eaf6cc6577b2da15</string>
	<string name="id_type_imei">IMEI</string>
	<string name="id_type_android_id">AndroidID</string>
</resources>